--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet" type="text/css">
-    <title>My test page</title>
+    <title>I Am Project</title>
   </head>
   <body>
     <h1>Feeling Good - Meditation on self to help growth for You and Others</h1>  
